# inventory-expiry-openenv

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements-inference.txt  tasks.py
server/: __init__.py  app.py  inventory_environment.py  requirements.txt
tests/: test_environment.py
